[package]
name = "dmitri"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["launcher", "dmenu"]
categories = ["command-line-utilities"]
description = "Fast and minimal application launcher, like dmenu"
repository = "https://github.com/gipsy-king/dmitri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
breadx = "2.0.0"
gluten-keyboard = "0.1.2"
rusttype = "0.9.2"
font-loader = "0.11.0"
getopts = "0.2"
rust-fuzzy-search = "0.1.1"
hex_color = "1.0.0"
