[package]
name = "dmitri"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["launcher", "dmenu"]
categories = ["command-line-utilities"]
description = "Fast and minimal application launcher, like dmenu"
repository = "https://github.com/gipsy-king/dmitri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
breadx = { version = "3.1.0", features = ["xinput", "xv", "xinerama"] }
x11rb = { version = "0.10.1", features = ["image"] }
breadx-keysyms = "0.1.1"
rusttype = "0.9.2"
font-loader = "0.11.0"
getopts = "0.2"
rust-fuzzy-search = "0.1.1"
hex_color = "1.0.0"
